@@ -3634,9 +3634,10 @@ AT_DATA([prog2.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COMPILE prog2.cob], [0], [], [])
-AT_CHECK([./prog], [0], [], [WARNING - Call to CBL_CREATE_FILE with wrong file_lock: 11
-WARNING - Call to CBL_CREATE_FILE with wrong file_dev: 22
-WARNING - Call to CBL_OPEN_FILE with wrong access mode: 55
+AT_CHECK([./prog], [0], [],
+[libcob: prog.cob: 15: warning: call to CBL_CREATE_FILE with wrong file_lock: 11
+libcob: prog.cob: 15: warning: call to CBL_CREATE_FILE with wrong file_dev: 22
+libcob: prog.cob: 15: warning: call to CBL_OPEN_FILE with wrong access mode: 55
 ])
 AT_CHECK([./prog2], [0], [], [])
 
