@@ -1,4 +1,10 @@
 
+2016-11-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c, coblocal.h, fileio.c: moved common code parts of fileio.c as
+	  function (cob_runtime_warning) to common.c;
+	  reformatted message and include source location, if known
+
 2016-10-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* call.c (cob_call): fr #101 - allow more parameters for CALL:
